--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["plugin:tailwindcss/recommended", "next/core-web-vitals", "next/typescript"]
+  "extends": ["plugin:tailwindcss/recommended", "next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "no-unused-vars": "warn",
+    "arrow-body-style": "off",
+    "prefer-arrow-callback": "off"
+  }
 }
