--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ NEXT_PUBLIC_twitterHandle="@cuonglinh2611"
 NEXT_PUBLIC_siteTitle="Cuong&Linh"
 NEXT_PUBLIC_siteDescription="Cuong&Linh Wedding"
 NEXT_PUBLIC_siteKeywords="cuonglinh2611, wedding, cuonglinh"
-NEXT_PUBLIC_siteImagePreviewUrl="preview.png"
+NEXT_PUBLIC_siteImagePreviewUrl="preview.jpg"
