--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_API_URL=http://localhost:26111/api
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
@@ -9,3 +10,7 @@ NEXT_PUBLIC_siteTitle="Cuong&Linh"
 NEXT_PUBLIC_siteDescription="Cuong&Linh Wedding"
 NEXT_PUBLIC_siteKeywords="cuonglinh2611, wedding, cuonglinh"
 NEXT_PUBLIC_siteImagePreviewUrl="preview.jpg"
+NEXT_SERVER_GOOGLE_SHEETS_SPREADSHEET_ID=
+NEXT_SERVER_GOOGLE_SHEETS_SHEET_NAME=
+NEXT_SERVER_GOOGLE_SHEETS_CLIENT_EMAIL=
+NEXT_SERVER_GOOGLE_SHEETS_PRIVATE_KEY=
