--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
     "framer-motion": "^11.11.1",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.14",
     "nuqs": "^1.19.3",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
