--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "critters": "^0.0.25",
     "cssnano": "^7.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
