--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@firebase/firestore": "^4.7.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^10.14.0",
     "framer-motion": "^11.11.1",
     "googleapis": "^144.0.0",
