--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.3"
   },
@@ -32,8 +33,8 @@
     "@types/react-dom": "^18",
     "critters": "^0.0.25",
     "cssnano": "^7.0.6",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
