--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-responsive": "^10.0.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.3"
