--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-responsive": "^10.0.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.3"
+    "tailwind-merge": "^2.5.3",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
