--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-joyride": "^2.9.2",
     "react-responsive": "^10.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
