--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 26111",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "host": "next dev -H 0.0.0.0 -p 2611"
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.10.8",
