--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "react-hook-form": "^7.53.1",
     "react-joyride": "^2.9.2",
     "react-responsive": "^10.0.0",
+    "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
-    "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.3",
     "use-sound": "^4.0.3"
