--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ NEXT_PUBLIC_twitterHandle="@cuonglinh2611"
 NEXT_PUBLIC_siteTitle="Cuong&Linh"
 NEXT_PUBLIC_siteDescription="Cuong&Linh Wedding"
 NEXT_PUBLIC_siteKeywords="cuonglinh2611, wedding, cuonglinh"
-NEXT_PUBLIC_siteImagePreviewUrl="preview.jpg"
+NEXT_PUBLIC_siteImagePreviewUrl="preview.png"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_SERVER_GOOGLE_SHEETS_SPREADSHEET_ID=
 NEXT_SERVER_GOOGLE_SHEETS_SHEET_NAME=
